--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -52,7 +52,7 @@ This workspace contains two main projects:
 - Standalone components
 - Signals for state management
 - Angular Material for UI
-- Bootstrap 5.3.2
+- Bootstrap 5.3.7 with responsive design
 
 ### Coding Guidelines
 
