Mise à jour pour eslint qui était en erreur

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -67,7 +67,7 @@ This workspace contains two main projects:
 
 - Components in feature folders if scope is strictly related to a feature, otherwise in shared/components
 - Services in feature/services if scope is strictly related to a feature, otherwise in shared/services
-- Models in feature/models if scope is strictly related to a feature, otherwise in shared/models
+- Models in feature/models if scope is strictly related to a feature, otherwise in shared/models. For models used as dto, place them in contracts folder. Dto models should not be used in components.
 - Guards in shared/guards
 
 ## General Guidelines
