Passage aux signaux pour toutes les propriétés binder dans les templates

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -77,3 +77,4 @@ This workspace contains two main projects:
 - Follow conventional commits
 - Use meaningful variable and function names
 - Document complex business logic
+- I use windows 11,
